# tox-tcp-tunnel

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json.bak
.github/workflows/: ci.yml  codeql-analysis.yml  coverage.yml  docs.yml  pr-check.yml
cli/: main.cpp
cmake/: FixupInstall.cmake.in  InstallRuntimeDepsWindows.cmake.in  Packaging.cmake  fake-pkg-config.bat
docs/: ADVANCED_SCENARIOS.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  DATABASE_TUNNELING.md  HTTP_TUNNELING.md
docs/plans/: 2026-03-19-github-actions-release-design.md  2026-03-19-github-actions-release.md  2026-03-23-cross-platform-release-packaging.md  2026-03-23-github-actions-failure-repair-design.md  2026-03-23-github-actions-failure-repair.md  2026-04-06-wix-arm64-release-fix-design.md  2026-04-06-wix-arm64-release-fix.md  2026-05-07-ci-package-compatibility.md  2026-05-15-tunnel-resume-protocol-partial.md  2026-05-20-code-review-feature-inventory.md  2026-05-20-code-review-findings.md
include/toxtunnel/app/: inspect_server.hpp  known_servers.hpp  rate_limiter.hpp  rules_engine.hpp  socks5_listener.hpp  stdio_pipe_bridge.hpp  tunnel_client.hpp  tunnel_resume_store.hpp  tunnel_server.hpp
include/toxtunnel/core/: io_context.hpp  owned_buffer.hpp  tcp_connection.hpp  tcp_listener.hpp
include/toxtunnel/tox/: bootstrap_source.hpp  tox_adapter.hpp  tox_connection.hpp  tox_ptr.hpp  tox_save.hpp  tox_thread.hpp  tox_watchdog.hpp  types.hpp
include/toxtunnel/tunnel/: bdp_flow_control.hpp  owned_frame_buffer.hpp  protocol.hpp  tunnel.hpp  tunnel_id_allocator.hpp  tunnel_manager.hpp  write_coalescer.hpp
include/toxtunnel/util/: atomic_file.hpp  config.hpp  config_reload.hpp  expected.hpp  metrics.hpp  path_security.hpp  qr_code.hpp  system_info.hpp  systemd_notify.hpp  windows_service.hpp
packaging/: config.yaml.example  known_servers.yaml.example
packaging/linux/: postinst  prerm  toxtunnel.service
packaging/macos/: com.toxtunnel.daemon.plist  postinstall.sh
packaging/windows/: installer.nsi  wix-service-patch.xml
scripts/: install.ps1  install.sh
skills/tox-tunnel-ops/: SKILL.md
skills/tox-tunnel-ops/examples/: db-migration.md  db-temp-access.md  dev-expose.md  local-loopback-test.md  nas-expose.md  prometheus-monitoring.md  rdp-remote.md  socks5-browser-proxy.md  ssh-remote.md  temp-maintenance.md  web-forward.md
skills/tox-tunnel-ops/references/: diagnose.md  execute.md
skills/tox-tunnel-ops/scripts/: diagnose.sh  verify.sh
skills/tox-tunnel-ops/templates/: client.yaml.tpl  rules.yaml.tpl  server.yaml.tpl
src/app/: inspect_server.cpp  known_servers.cpp  rate_limiter.cpp  rules_engine.cpp  socks5_listener.cpp  stdio_pipe_bridge.cpp  tunnel_client.cpp  tunnel_resume_store.cpp  tunnel_server.cpp
src/core/: io_context.cpp  tcp_connection.cpp  tcp_listener.cpp
src/tox/: bootstrap_source.cpp  tox_adapter.cpp  tox_connection.cpp  tox_ptr.cpp  tox_save.cpp  tox_thread.cpp  tox_watchdog.cpp  types.cpp
src/tunnel/: bdp_flow_control.cpp  protocol.cpp  tunnel.cpp  tunnel_manager.cpp  write_coalescer.cpp
src/util/: atomic_file.cpp  config.cpp  config_reload.cpp  logger.cpp  metrics.cpp  qr_code.cpp  system_info.cpp  systemd_notify.cpp  windows_service.cpp
tests/: CMakeLists.txt
tests/chaos/: chaos_smoke_test.cpp
tests/integration/: test_config_pipeline.cpp  test_http_scenarios.cpp  test_inspect_ipc.cpp  test_pipe_bridge.cpp  test_rules_integration.cpp  test_sighup_reload.cpp  test_tcp_loopback.cpp  test_tunnel_data_flow.cpp
tests/packaging/: verify_linux_abi.sh  verify_linux_deb_install.sh  verify_linux_rpm_install.sh  verify_macos_pkg.sh  verify_windows_deps.ps1  verify_windows_install.ps1  verify_windows_msi.ps1
tests/soak/: soak_smoke_test.cpp
tests/unit/: atomic_file_test.cpp  client_failover_test.cpp  config_reload_test.cpp  outbound_zero_copy_test.cpp  path_security_test.cpp  rate_limiter_test.cpp  socks5_listener_test.cpp  t2_atomic_persistence_test.cpp  t8_data_race_test.cpp  test_bootstrap_source.cpp  test_circular_buffer.cpp  test_config.cpp  test_expected.cpp  test_inbound_strand.cpp  test_inspect_server.cpp  test_known_servers.cpp  test_metrics.cpp  test_protocol_info.cpp  test_qr_code.cpp  test_rules_engine.cpp  test_tox_adapter.cpp  test_tunnel.cpp  test_tunnel_manager.cpp  tox_watchdog_test.cpp  tunnel_coalesce_test.cpp  tunnel_id_allocator_test.cpp  tunnel_reaper_test.cpp  tunnel_resume_test.cpp  write_coalescer_test.cpp  zero_copy_read_test.cpp
